--- a/widget/html/history/history.html
+++ b/widget/html/history/history.html
@@ -8,8 +8,6 @@
     <link rel="stylesheet" type="text/css" href="../../css/history.css" />
     <link rel="stylesheet" type="text/css" href="../../css/button.css" />
     <script type="text/javascript" src="../../script/api.js"></script>
-<!--     <script type="text/javascript" src="../../script/constants.js"></script>
-    <script type="text/javascript" src="../../script/util.js"></script> -->
 </head>
 
 <body class="body-silver">
@@ -26,15 +24,71 @@
                 </a>
         </header>
         <div id="main" class="flex-con">
-            <div class="groupName">患者</div>
-            <div class="group">
-                <div class="field bottom" onclick="openWin('patient');">
-                    <div class="key">患者信息</div>
-                    <div class="value more"><span>&gt;</span></div>
+            <div class="groupName">基本信息</div>
+            <div class="group group-edit">
+                <div class="field">
+                    <div class="key">姓名</div>
+                    <div class="value">
+                        <input type="text" id="name" onblur="checkPatientName();" />
+                    </div>
+                </div>
+                <div class="field" onclick="openPicker('gender');">
+                    <div class="key">性别</div>
+                    <div class="value">
+                        <input type="text" id="gender" />
+                    </div>
+                </div>
+                <div class="field" onclick="openPicker('date');">
+                    <div class="key">出生日期</div>
+                    <div class="value">
+                        <input type="text" id="birthday" />
+                    </div>
+                </div>
+                <div class="field">
+                    <div class="key">年龄</div>
+                    <div class="value">
+                        <input type="text" id="age" />
+                    </div>
+                </div>
+                <div class="field bottom">
+                    <div class="key">职业</div>
+                    <div class="value">
+                        <input type="text" id="job" />
+                    </div>
+                </div>
+            </div>
+            <div class="groupName">编号</div>
+            <div class="group group-edit">
+                <div class="field">
+                    <div class="key">住院号</div>
+                    <div class="value">
+                        <input type="text" id="admission_number" />
+                    </div>
+                </div>
+                <div class="field bottom">
+                    <div class="key">门诊号</div>
+                    <div class="value">
+                        <input type="text" id="outpatient_number" />
+                    </div>
+                </div>
+            </div>
+            <div class="groupName">联系方式</div>
+            <div class="group group-edit">
+                <div class="field">
+                    <div class="key">电话</div>
+                    <div class="value">
+                        <input type="text" id="phone" />
+                    </div>
+                </div>
+                <div class="field textarea_field bottom">
+                    <div class="textarea_key">地址</div>
+                    <div class="textarea_value">
+                        <textarea id="address" placeholder="请输入联系地址"></textarea>
+                    </div>
                 </div>
             </div>
             <div class="groupName">诊疗</div>
-            <div class="group">
+            <div class="group group-edit">
                 <div class="field" onclick="openPicker('consultation_department');">
                     <div class="key">会诊科室</div>
                     <div class="value">
