增加绿色按钮，查看到修改的过渡改成fade

--- a/widget/html/accessoryexam/viewAccessoryExamFrame.html
+++ b/widget/html/accessoryexam/viewAccessoryExamFrame.html
@@ -345,7 +345,7 @@ function modiAccessoryExam() {
         bounces: false,
         vScrollBarEnabled: false,
         animation: {
-            type: "movein",
+            type: "fade",
             duration: 0
         }
     });
