--- a/widget/html/history/viewFullHistory.html
+++ b/widget/html/history/viewFullHistory.html
@@ -24,7 +24,7 @@
             <div id="middle">
                 <span id="title"></span>
             </div>
-            <a id="rightleft" tapmode="" onclick="openWin('followupList');" class="button button-raised button-silver">
+            <a id="rightleft" tapmode="" onclick="openWin('followupList');" class="button button-raised button-green">
                     随访
                 </a>
             <a id="right" tapmode="" onclick="openWin('modiHistory');" class="button button-raised button-silver">
