--- a/widget/html/physical/viewPhysicalFrame.html
+++ b/widget/html/physical/viewPhysicalFrame.html
@@ -210,7 +210,7 @@ function modiPhysical() {
         reload: true,
         bounces: false,
         animation: {
-            type: "movein",
+            type: "fade",
             duration: 0
         }
     });
