--- a/widget/html/accessoryexam/viewAccessoryExamFrame.html
+++ b/widget/html/accessoryexam/viewAccessoryExamFrame.html
@@ -334,6 +334,43 @@ function getAccessoryExam() {
     });
 }
 
+function setImgs(data) {
+    var idx = 0;
+    while (idx < historyConstants.imgGroup.length) {
+        var imgHtml = getImgHtml(data[historyConstants.imgGroup[idx]]);
+        $api.byId(historyConstants.imgGroup[idx]).innerHTML = imgHtml;
+        idx = idx + 1;
+    }
+}
+
+function getImgHtml(obj) {
+    var size = JSONLength(obj);
+    var idx = 1;
+    var imgHtml = "";
+    while (idx <= size) {
+        imgHtml = imgHtml + "<img src=" + obj[idx + ""] +
+        " onclick='openImg(this.src)' />";
+        idx = idx + 1;
+    }
+    return imgHtml;
+}
+
+function openImg(url) {
+    var photoBrowser = api.require('photoBrowser');
+    photoBrowser.open({
+        images: [
+            url,
+        ],
+        activeIndex: 0,
+        // placeholderImg: 'widget://res/img/apicloud.png',
+        bgColor: '#000'
+    }, function(ret) {
+        if (ret.eventType == "click") {
+            photoBrowser.close();
+        }
+    });
+}
+
 function modiAccessoryExam() {
     api.openWin({
         name: api.winName + "_modi_accessory_exam",
