--- a/widget/html/followup/viewFollowUpFrame.html
+++ b/widget/html/followup/viewFollowUpFrame.html
@@ -62,6 +62,7 @@
  */
 apiready = function() {
     window.closeWin = function(winName) {
+        rmStorage("followup");
         api.closeWin();
     }
 
@@ -69,7 +70,6 @@ apiready = function() {
     $api.attr($api.byId('treatment'), 'readonly', 'true');
 
     follow_up_id = api.pageParam.follow_up_id;
-
     getFollowUp(follow_up_id);
 
     api.addEventListener({
